# youtube-dl-project

./: .gitignore  Cargo.toml  LICENSE.txt  Rocket.toml  get_token.bat  package-lock.json  package.json  tailwind.config.js  tz.md
.sqlx/: query-08be3203eedf028216e17845351cff6c343427d12a4abba2472d83331a000fcc.json  query-14abebf0f799b44238d83f14886b0f6668bd8cefceb220ad30e2df38707da8ce.json  query-1e7eb721c4b3fd0278351fce4255e317d23bd959421ded591091a7287468b266.json  query-2d55dc542cc1f9ec378a209ffd5869017d82c9615aa5cebf749e09795618e904.json  query-326cfa3445cd1faba566e4e0b32cf7ad5c1ad67f6151f8f07a222453583df9c4.json  query-42d2baeb1891ded6cf01b671ac835a9687064cfeacc8a0537211afaaa7c1c1fc.json  query-504c10fe796d56bdd4b26e8cbdc1997a669836e53ac6af55de35a06d6ffe521e.json  query-5306eaa5d7d5d4842465ebaaf8ec7c7da2d45473bb9d5b2acecde7cc3dde1b8c.json  query-667950535ace2023bdb63fecca67575f6272c6659e4b8b7f2c3b34408914b1c9.json  query-6dab4b4ec07f102e66caa00da7ece0aade2362d6205125daf114c98ecc46dfa6.json  query-6f0f6f18df239f6d54a7a4c4515e267dbcf5b2092739673906dc4caa0634475c.json  query-7867d19dca32a369d41c2003b022b4d48a2b6c5647aa824c93085da6aa904e05.json  query-7cba3ae276c9310e72912775dde22558da788d51eb847c34a6c30495a1e0ef5f.json  query-7f48427ded1118d9157f69cc4c157298d311319961df7835f26e915b14b1742c.json  query-94b4055e157afc5f7dc1d78b1d034bd2f5c87ce9d0f4ffcb35e484030414f929.json  query-9694481d3cf44df7b7de8ba3c75094473496b29b98839c8eae53b12b6b96c0c8.json  query-9b1a1817e1abdfd864f92ccb5d034d178ad0d891f203724a5d66f591aab0fe8c.json  query-9d115a5abeeaeb3e6e97f239f4f2a33e22996cc325931b27b7f0b4bb5b8518b3.json  query-a0a3e149f164c0df70d38409c3f179a313eb0d92ecb2cec1568f241f3af08f4e.json  query-cfb59577b0f67161755628f2ac0dbac2820bca383acad9cbb3f0649a7ca29dc0.json  query-e241c30689abdcc2df0b8c6f838665975520d6b34fe59808bb064a8c0c4f5b71.json  query-fe1cdc9b524a25011aa96fda14d2c78904e1e8e6b13afc05c87429e49e3d21f2.json
LICENSE-3RD-PARTY/: AtomicParsley.txt  Material Design Icons.txt  PhantomJS.txt  yt-dlp.txt
browser_extension/: server.js  (+2 more)
(+64 files in other folders)
