[package]
name = "youtube-dl-server"
version = "0.1.0"
edition = "2021"
authors = ["Olanti <olanti-p@yandex.ru>"]
description = """
Local server with REST and Web interface for downloading videos off of internet.
Based on yt_dlp, supports variety of sites and allows managing ongoing downloads.
Provides browser extension for integrating download button directly on youtube.com
"""
license = "MIT"
homepage = "https://github.com/olanti-p/youtube-dl-project"


[dependencies.anyhow]
version = "1.0.71"

[dependencies.bytelines]
version = "2.4.0"

[dependencies.chrono]
version = "0.4.26"
features = [
    "clock",
    "serde"
]

[dependencies.clap]
version = "4.3.3"
features = [
    "derive"
]

[dependencies.directories]
version = "5.0.1"

[dependencies.filenamify]
version = "0.1.0"

[dependencies.handlebars]
version = "4.3.7"

[dependencies.nix]
version = "0.26.2"

[dependencies.notify-rust]
version = "4.8.0"

[dependencies.rand]
version = "0.8.5"

[dependencies.rand_chacha]
version = "0.3.1"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = [
    "json",
    "uuid"
]

[dependencies.serde]
version = "1.0.164"
features = [
    "derive"
]

[dependencies.serde_json]
version = "1.0.96"

[dependencies.serde_yaml]
version = "0.9.21"

[dependencies.sqlx]
version = "0.7.1"
features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "uuid",
    "chrono",
]

[dependencies.tokio]
version = "1.28.2"
features = [ "full" ]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-appender]
version = "0.2.2"

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.windows-sys]
version = "0.48.0"

[dependencies.windows-service]
version = "0.6.0"
